# sgdjscc_lab

./: .gitignore  README.md  improvement_ideas.docx  pyproject.toml  requirements.txt  sgdjscc_lab_framework_diagram.drawio
configs/: composed.yaml  composed_paper_like_multi.yaml  composed_phase5.yaml  composed_phase5_full.yaml  composed_train.yaml  composed_train_controlnet.yaml  composed_train_controlnet_edge_jscc.yaml  composed_train_controlnet_shared_vae.yaml  composed_train_csi_estimation.yaml  composed_train_edge_codec.yaml  composed_train_end_to_end_ft.yaml  composed_train_jscc.yaml  composed_train_jscc_filelist.yaml  composed_train_text_dm.yaml  composed_train_text_dm_celeba.yaml  composed_train_text_dm_coco_json.yaml  composed_video.yaml  composed_video_paper_like_multi.yaml  composed_video_smoke.yaml  default.yaml  paper_eval_awgn.yaml  paper_train_controlnet.yaml  paper_train_edge_codec.yaml  paper_train_jscc.yaml  paper_train_jscc_gan.yaml  paper_train_text_dm.yaml
docs/: README.md  checkpoint_usage.md  dataset_status.md  etri_development_plan_v2.md  etri_development_roadmap.md  etri_overview.md  etri_stage1_validation.md  etri_strategy.md  framework_comparison.md  framework_file_roles.md  limitation_reference_map.md  paper_alignment.md  paper_gap_closure.md  paper_training_alignment.md  phase4.md  phase5.md  phases_1to3.md  smoke_training.md  training_scaffold.md  video_extension_lgvsc.md
scripts/: benchmark_latency.py  benchmark_sampling.py  eval_edge_codec.py  evaluate.py  evaluate_video.py  export_checkpoint.py  generate_captions.py  infer_images.py  (+10 more)
(+198 files in other folders)
